@@ -2,7 +2,7 @@ Package: epivizr
 Maintainer: Hector Corrada Bravo <hcorrada@gmail.com>
 Author: Hector Corrada Bravo, Florin Chelaru, Llewellyn Smith, Naomi
         Goldstein
-Version: 1.7.0
+Version: 1.7.1
 License: Artistic-2.0
 Title: R Interface to epiviz web app
 Description: This package provides Websocket communication to the
